--- a/iCommander/Views/Base.lproj/Main.storyboard
+++ b/iCommander/Views/Base.lproj/Main.storyboard
@@ -1028,7 +1028,7 @@
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES"/>
                                                     <prototypeCellViews>
                                                         <tableCellView id="vPg-Uk-rVF">
-                                                            <rect key="frame" x="1" y="1" width="105" height="17"/>
+                                                            <rect key="frame" x="11" y="1" width="105" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fCW-iw-So8">
@@ -1070,7 +1070,7 @@
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES"/>
                                                     <prototypeCellViews>
                                                         <tableCellView id="eFj-JW-V3g">
-                                                            <rect key="frame" x="109" y="1" width="10" height="17"/>
+                                                            <rect key="frame" x="119" y="1" width="10" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nTy-op-zrQ">
@@ -1103,7 +1103,7 @@
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES"/>
                                                     <prototypeCellViews>
                                                         <tableCellView id="6B6-bf-ZGH">
-                                                            <rect key="frame" x="122" y="1" width="14" height="17"/>
+                                                            <rect key="frame" x="132" y="1" width="14" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ahf-8t-pqI">
@@ -1183,7 +1183,7 @@
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES"/>
                                                     <prototypeCellViews>
                                                         <tableCellView id="k3h-8f-E7k">
-                                                            <rect key="frame" x="1" y="1" width="114" height="17"/>
+                                                            <rect key="frame" x="11" y="1" width="114" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2GD-hF-geQ">
@@ -1225,7 +1225,7 @@
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES"/>
                                                     <prototypeCellViews>
                                                         <tableCellView id="cgC-6u-Xj5">
-                                                            <rect key="frame" x="118" y="1" width="15" height="17"/>
+                                                            <rect key="frame" x="128" y="1" width="15" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3PY-4C-Acu">
@@ -1258,7 +1258,7 @@
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES"/>
                                                     <prototypeCellViews>
                                                         <tableCellView id="FfE-dW-wbX">
-                                                            <rect key="frame" x="136" y="1" width="26" height="17"/>
+                                                            <rect key="frame" x="146" y="1" width="25" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OCZ-0H-SmI">
@@ -1319,6 +1319,16 @@
                                     <real value="3.4028234663852886e+38"/>
                                 </customSpacing>
                             </stackView>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="gZy-80-Lzv">
+                                <rect key="frame" x="745" y="457" width="62" height="32"/>
+                                <buttonCell key="cell" type="push" title="+" bezelStyle="rounded" image="star" catalog="system" imagePosition="leading" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="PXE-BR-rDP">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="addRemoveFavorite:" target="XfG-lQ-9wD" id="ZqI-YO-LMD"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <constraints>
                             <constraint firstItem="bjk-zv-Rge" firstAttribute="bottom" secondItem="acu-y3-Mq3" secondAttribute="top" constant="-10" id="07D-wa-YFx"/>
@@ -1330,6 +1340,7 @@
                             <constraint firstItem="qfq-xS-6Zw" firstAttribute="trailing" secondItem="m2S-Jp-Qdl" secondAttribute="trailing" id="BnW-px-6bs"/>
                             <constraint firstItem="ZVq-ae-km5" firstAttribute="top" secondItem="ZaY-nD-oUA" secondAttribute="bottom" constant="8" symbolic="YES" id="FrJ-c8-kE7"/>
                             <constraint firstItem="ZVq-ae-km5" firstAttribute="width" secondItem="m2S-Jp-Qdl" secondAttribute="width" multiplier="50%" id="GmR-cA-JjU"/>
+                            <constraint firstItem="gZy-80-Lzv" firstAttribute="trailing" secondItem="m2S-Jp-Qdl" secondAttribute="trailing" id="HT5-n7-ebz"/>
                             <constraint firstItem="1lF-bF-iYg" firstAttribute="top" secondItem="CQb-Af-DYr" secondAttribute="bottom" constant="8" symbolic="YES" id="Jpc-1k-usX"/>
                             <constraint firstItem="sW6-Wm-D2b" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" symbolic="YES" id="Njj-Nm-opD"/>
                             <constraint firstItem="qfq-xS-6Zw" firstAttribute="top" secondItem="MGF-gc-83m" secondAttribute="bottom" constant="8" symbolic="YES" id="QUo-d9-SWv"/>
@@ -1341,6 +1352,7 @@
                             <constraint firstItem="ZVq-ae-km5" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="get-9R-5WK"/>
                             <constraint firstItem="CQb-Af-DYr" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" symbolic="YES" id="hMK-Lb-Ljg"/>
                             <constraint firstItem="ZaY-nD-oUA" firstAttribute="top" secondItem="sW6-Wm-D2b" secondAttribute="bottom" constant="8" symbolic="YES" id="k4l-KJ-ctu"/>
+                            <constraint firstItem="CQb-Af-DYr" firstAttribute="bottom" secondItem="gZy-80-Lzv" secondAttribute="bottom" id="kfU-A9-fQ9"/>
                             <constraint firstItem="ZVq-ae-km5" firstAttribute="bottom" secondItem="bjk-zv-Rge" secondAttribute="top" constant="-10" id="nsv-PO-AeE"/>
                             <constraint firstItem="MGF-gc-83m" firstAttribute="leading" secondItem="q3L-KJ-iO5" secondAttribute="trailing" id="oJf-fa-GOj"/>
                             <constraint firstItem="acu-y3-Mq3" firstAttribute="bottom" secondItem="m2S-Jp-Qdl" secondAttribute="bottom" id="rmx-T0-Epq"/>
@@ -1355,6 +1367,7 @@
                         <outlet property="F6MoveButton" destination="jtf-ln-1NF" id="yM5-cV-P4k"/>
                         <outlet property="F7NewFolderButton" destination="SFB-EK-5Jg" id="84a-YF-KLo"/>
                         <outlet property="F8DeleteButton" destination="lLn-1K-2Pz" id="z9Y-CG-5gQ"/>
+                        <outlet property="addRemoveFavorite" destination="gZy-80-Lzv" id="T1R-0i-WIU"/>
                         <outlet property="favoritesStackView" destination="CQb-Af-DYr" id="UjY-Dm-nBV"/>
                         <outlet property="leftPath" destination="ffA-3b-8cs" id="3RR-DL-OOO"/>
                         <outlet property="leftShowHiddenFiles" destination="bjk-zv-Rge" id="uLf-ZX-wQw"/>
@@ -1374,7 +1387,7 @@
                     </connections>
                 </menu>
             </objects>
-            <point key="canvasLocation" x="75" y="1023"/>
+            <point key="canvasLocation" x="74" y="1048"/>
         </scene>
         <!--Window Controller-->
         <scene sceneID="ywc-4J-fNI">
@@ -1485,12 +1498,12 @@ Gw
                                     </gridCell>
                                     <gridCell row="jYw-Mw-lSw" column="bLg-wC-f0G" id="GaO-Et-Shi">
                                         <progressIndicator key="contentView" horizontalCompressionResistancePriority="999" maxValue="100" doubleValue="50" style="bar" translatesAutoresizingMaskIntoConstraints="NO" id="E7Y-TX-ova">
-                                            <rect key="frame" x="255" y="35" width="100" height="18"/>
+                                            <rect key="frame" x="127" y="35" width="100" height="18"/>
                                         </progressIndicator>
                                     </gridCell>
                                     <gridCell row="jYw-Mw-lSw" column="Orh-zC-AnA" id="1w1-mL-0P1">
                                         <textField key="contentView" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Ond-EO-zUm">
-                                            <rect key="frame" x="380" y="36" width="41" height="16"/>
+                                            <rect key="frame" x="252" y="36" width="41" height="16"/>
                                             <textFieldCell key="cell" lineBreakMode="clipping" title="% File" id="mR3-iN-2Eq">
                                                 <font key="font" metaFont="system"/>
                                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -1510,12 +1523,12 @@ Gw
                                     </gridCell>
                                     <gridCell row="cMq-zK-Psk" column="bLg-wC-f0G" id="oIW-te-lvg">
                                         <progressIndicator key="contentView" horizontalCompressionResistancePriority="999" maxValue="100" doubleValue="50" style="bar" translatesAutoresizingMaskIntoConstraints="NO" id="mLp-FL-ssF">
-                                            <rect key="frame" x="255" y="-1" width="100" height="18"/>
+                                            <rect key="frame" x="127" y="-1" width="100" height="18"/>
                                         </progressIndicator>
                                     </gridCell>
                                     <gridCell row="cMq-zK-Psk" column="Orh-zC-AnA" id="fEY-3L-L7C">
                                         <textField key="contentView" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="mg9-YC-siO">
-                                            <rect key="frame" x="380" y="0.0" width="62" height="16"/>
+                                            <rect key="frame" x="252" y="0.0" width="62" height="16"/>
                                             <textFieldCell key="cell" lineBreakMode="clipping" title="% Overall" id="RrC-06-v5s">
                                                 <font key="font" metaFont="system"/>
                                                 <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -1559,5 +1572,6 @@ Gw
     <resources>
         <image name="NSActionTemplate" width="15" height="15"/>
         <image name="NSHomeTemplate" width="19" height="16"/>
+        <image name="star" catalog="system" width="17" height="16"/>
     </resources>
 </document>
